code gen update, show cookie, request parameter support, securibench micro basic, fixes